...
        android:text="@string/budget_title"
        android:textAppearance="@style/screen_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/budget_icon" />

    <EditText
        android:id="@+id/input_budget_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:fontFamily="@font/lexend_deca"
        android:hint="Budget Name"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/budget_heading" />

    <AutoCompleteTextView
        android:id="@+id/input_budget_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:drawableEnd="@drawable/dropdown_icon"
        android:fontFamily="@font/lexend_deca"
...
        android:padding="15dp"
        android:focusable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_budget_name" />

    <EditText
        android:id="@+id/input_budget_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:fontFamily="@font/lexend_deca"
        android:hint="Budget Limit"
        android:inputType="number|numberDecimal"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_budget_category" />

    <EditText
        android:id="@+id/input_budget_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Date"
        android:background="@drawable/text_background"
        android:padding="15dp"
        android:layout_margin="15dp"
...
        app:layout_constraintTop_toBottomOf="@id/input_budget_limit"
        app:layout_constraintLeft_toLeftOf="parent"/>

<!--CREATE BUDGET BUTTON-->

    <Button
        android:id="@+id/create_budget_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/lexend_deca"
        android:padding="15dp"
...
