<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.income.IncomeFragment">

    <ImageView
        android:id="@+id/income_icon"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/income_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/income_heading"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lexend_deca_bold"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/income_title"
        android:textAppearance="@style/screen_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/income_icon" />

    <TextView
        android:id="@+id/incomeValue"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lexend_deca_bold"
        android:text="$3,000"
        android:textColor="@color/gray100"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/income_heading" />


    <AutoCompleteTextView
        android:id="@+id/input_income_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:drawableEnd="@drawable/dropdown_icon"
        android:focusable="false"
        android:fontFamily="@font/lexend_deca"
        android:hint="Income Type"
        android:inputType="none"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/income_heading" />

    <EditText
        android:id="@+id/input_income_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:fontFamily="@font/lexend_deca"
        android:hint="Amount"
        android:inputType="number|numberDecimal"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_income_type" />

    <EditText
        android:id="@+id/input_income_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:clickable="true"
        android:drawableEnd="@drawable/calender_icon"
        android:enabled="true"
        android:focusable="false"
        android:fontFamily="@font/lexend_deca"
        android:hint="Date"
        android:inputType="none"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_income_amount" />



    <Button
        android:id="@+id/add_income_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/lexend_deca"
        android:padding="15dp"
        android:text="@string/income_button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_income_date" />

    <TextView
        android:id="@+id/section_title"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lexend_deca"
        android:gravity="top"
        android:text="@string/income_subHeading"
        android:textAppearance="@style/section_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_income_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/income_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/section_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:clipToPadding="false"
        android:paddingBottom="80dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>