<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.expenses.ExpensesFragment">

    <ImageView
        android:id="@+id/expense_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wallet"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/expense_heading"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lexend_deca_bold"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/expense_title"
        android:textAppearance="@style/screen_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_icon" />

    <!--    <EditText-->
<!--        android:id="@+id/input_expense_type"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="15dp"-->
<!--        android:background="@drawable/text_background"-->
<!--        android:fontFamily="@font/lexend_deca"-->
<!--        android:inputType="text"-->
<!--        android:hint="Expense type"-->
<!--        android:padding="15dp"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/expense_heading" />-->

    <TextView
        android:id="@+id/expenseValue"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lexend_deca_bold"
        android:text="$500"
        android:textColor="@color/gray100"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/expense_heading" />

    <AutoCompleteTextView
        android:id="@+id/input_expense_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:drawableEnd="@drawable/dropdown_icon"
        android:focusable="false"
        android:fontFamily="@font/lexend_deca"
        android:hint="Expense Type"
        android:inputType="none"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_heading" />

    <EditText
        android:id="@+id/input_expense_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:fontFamily="@font/lexend_deca"
        android:hint="Amount"
        android:inputType="numberDecimal"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_expense_type" />

    <EditText
        android:id="@+id/input_expense_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:fontFamily="@font/lexend_deca"
        android:hint="Date"
        android:inputType="none"
        android:clickable="true"
        android:enabled="true"
        android:focusable="false"
        android:drawableEnd="@drawable/calender_icon"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_expense_amount" />

    <Button
        android:id="@+id/add_expense_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/lexend_deca"
        android:padding="15dp"
        android:text="@string/expense_button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_expense_date" />

    <TextView
        android:id="@+id/section_title"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lexend_deca"
        android:gravity="top"
        android:text="@string/expense_subHeading"
        android:textAppearance="@style/section_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_expense_button" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expenses_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/section_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        />


</androidx.constraintlayout.widget.ConstraintLayout>