...
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="start"
                        android:paddingStart="16dp">

                        <TextView
                            android:id="@+id/total_expenses_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lexend_deca_bold"
                            android:text="$400"
                            android:textColor="@color/black"
                            android:textSize="32sp" />
...
